--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="keywords" content="fun, neal.fun, boredbutton, bored, have fun,">
     <meta name="author" content="NicoWebCreations">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="google.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main/style.css">
+    <link rel="stylesheet" href="main/google.css">
+    <link rel="stylesheet" href="main/index.css">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
