--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <div class="w3-container">
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
-    </a>  <a href="index.html" ><img src="logo.png" width="150px" height="auto"> </img></a>
-    <img src="logo.png" style="width:45%;" class="w3-round"><br><br>
-    <h4><b>This site was created by:</b></h4>
+    </a>  <a href="index.html" ><img src="logo.png" width="120px" height="auto"> </img></a>
+    <br>
+    <h4><b>Thelostdocs.com</b></h4>
     <p class="w3-text-grey"><h5>NicoWebCreations</h5></p>
   </div>
   <div class="w3-bar-block">
