--- a/error.html
+++ b/error.html
@@ -7,7 +7,9 @@
 
         <meta name="author" content="NicoWebCreations">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="favicon.png">  
+        <link rel="icon" type="image/x-icon" href="favicon.png">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
     </head>
     <body>
 <a href="index.html" ><img src="logo.png" width="150px" height="auto" style="float: left"> </img></a>
