--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     <a href="#fun" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Fun Stuff!</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>Contact</a>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- display -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="3449837022"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div class="w3-panel w3-large">
   </div>
 </nav>
