--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -24,5 +24,15 @@ body {
 <p>For a chance to get an Amazon gift card, contact redadmiral1118@gmail.com with the PIN you used and this string of characters to prove it: <i>Bt5%w8£</i></p>
 <h4><i> This is not a scam and is legit. We will not ask for personal information. If you would prefer not to send an email, please submit a contact form with the details.
 </center>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
