--- a/guesscode.html
+++ b/guesscode.html
@@ -42,6 +42,15 @@
   <iframe src="display.html"> </iframe>
   <br>
   <br>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- <h4> Please note that this system has still got a few bugs, <br>so may result in wrong entries being shown. </h4> -->
 </html>
