--- a/index.html
+++ b/index.html
@@ -138,7 +138,16 @@
   <!-- Footer -->
 
   <div class="w3-black w3-center w3-padding-24">Made by NicoWebCreations</div>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+  crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+  style="display:inline-block;width:728px;height:90px"
+  data-ad-client="ca-pub-6501023040597198"
+  data-ad-slot="2108039039"></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!-- End page content -->
 </div>
 
