--- a/location.html
+++ b/location.html
@@ -20,6 +20,16 @@
             <label for="colorpicker">Color Picker:</label>
             <input type="color" id="colorpicker" value="#0000ff">
             <a href="location2.html"><button>Continue</button></a>
-        </centre>  
+        </centre>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </body>
 </html>
