--- a/music.html
+++ b/music.html
@@ -306,6 +306,15 @@ div.borderColor3 {
             </style>
 
 <iframe src="musicbeat.html" height="200" width="800" style="display: block; margin-left: auto; margin-right: auto; z-index: 12;" title="Iframe Example"></iframe>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       </body>
 </html>
