--- a/error.html
+++ b/error.html
@@ -14,5 +14,15 @@
     <body>
 <a href="index.html" ><img src="logo.png" width="150px" height="auto" style="float: left"> </img></a>
         <h1>Either this page is temporarily down or it is permanently down. We apologize for the inconvenience it has caused to you.</h1>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </body>
 </html>
