--- a/paint.html
+++ b/paint.html
@@ -5566,5 +5566,15 @@
       </div>
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </body>
     </html>
