--- a/spendit.html
+++ b/spendit.html
@@ -70,5 +70,17 @@
       </small>
     </div>
     <script src="code.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+    crossorigin="anonymous"></script>
+<!-- display -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-6501023040597198"
+    data-ad-slot="3449837022"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </body>
 </html>
