--- a/location2.html
+++ b/location2.html
@@ -14,37 +14,39 @@
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
             crossorigin="anonymous"></script>
 
-            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-            integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-            crossorigin=""/>
+            <script src="https://cdn.jsdelivr.net/npm/@mapbox/mapbox-sdk/umd/mapbox-sdk.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mapbox/mapbox-sdk/umd/mapbox-sdk-geocoding.min.js"></script>
+
     </head>
     <body>
-    <!-- Create a div element to hold the map -->
-    <div id="map"></div>
+        <button id="get-location-button">Get Location</button>
+        <div id="address"></div>
 
-    <!-- Include the Leaflet JavaScript file -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-            crossorigin=""></script>
+        <script>
+            document.getElementById('get-location-button').addEventListener('click', function() {
+  // Check if the browser supports the Geolocation API
+  if ('geolocation' in navigator) {
+    // Get the user's current position
+    navigator.geolocation.getCurrentPosition(function(position) {
+      // Use the Mapbox Geocoding API to get the user's address
+      mapboxClient.geocoding.reverseGeocode({
+        latitude: position.coords.latitude,
+        longitude: position.coords.longitude
+      })
+      .send()
+      .then(function(response) {
+        // Get the first address from the response
+        var address = response.body.features[0];
+        // Display the address on the page
+        document.getElementById('address').innerHTML = address.place_name;
+      });
+    });
+  } else {
+    // The browser does not support the Geolocation API
+    alert('Your browser does not support geolocation.');
+  }
+});
 
-    <script>
-      // Create a new Leaflet map in the div element with the specified ID
-      var map = L.map('map');
-
-      // Add a tile layer to the map
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-
-      // Set the map view to the user's current location, if available
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-          var lat = position.coords.latitude;
-          var lng = position.coords.longitude;
-          map.setView([lat, lng], 13);
-          L.marker([lat, lng]).addTo(map);
-        });
-      }
-    </script>
+        </script>
       </body>
 </html>
