--- a/music.html
+++ b/music.html
@@ -85,7 +85,7 @@
               </div>
               <div data-key="80" class="key">
                 <kbd>p</kbd>
-                <span class="sound">Beethoven Remix</span>
+                <span class="sound">Beethoven Epic Remix</span>
               </div>
             </div>
 </centre>
