--- a/location2.html
+++ b/location2.html
@@ -14,8 +14,7 @@
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
             crossorigin="anonymous"></script>
 
-            <script src="https://cdn.jsdelivr.net/npm/@mapbox/mapbox-sdk/umd/mapbox-sdk.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mapbox/mapbox-sdk/umd/mapbox-sdk-geocoding.min.js"></script>
+            <script src="https://api.opencagedata.com/geocode/v1/js?key=2e5f5c49db3e4b4f9a8a9aa2a06dad74"></script>
 
     </head>
     <body>
@@ -40,6 +39,81 @@
               });
           });
         });
+      </script>
+      <div id="map"></div>
+
+      <style>
+        #map {
+          height: 400px;
+          width: 100%;
+        }
+      </style>
+      
+      <script>
+        // Create a new OpenLayers map and add it to the page
+        var map = new ol.Map({
+          target: 'map',
+          layers: [
+            new ol.layer.Tile({
+              source: new ol.source.OSM()
+            })
+          ],
+          view: new ol.View({
+            center: [0, 0],
+            zoom: 2
+          })
+        });
+
+
+        map.getView().setCenter([LONGITUDE, LATITUDE]);
+
+var marker = new ol.Overlay({
+  position: [LONGITUDE, LATITUDE],
+  element: document.getElementById('marker')
+});
+map.addOverlay(marker);
+
+const API_KEY = '2e5f5c49db3e4b4f9a8a9aa2a06dad74';
+const latitude = LATITUDE;
+const longitude = LONGITUDE;
+
+const url = `https://api.opencagedata.com/geocode/v1/json?q=${latitude}+${longitude}&key=${2e5f5c49db3e4b4f9a8a9aa2a06dad74}`;
+
+fetch(url)
+  .then(response => response.json())
+  .then(data => {
+    // Here you can access the data returned by the API
+    console.log(data);
+  })
+  .catch(error => {
+    // Here you can handle any errors that may occur
+    console.error(error);
+  });
+
+  const map = new ol.Map({
+  target: 'map',
+  layers: [
+    new ol.layer.Tile({
+      source: new ol.source.OSM()
+    }),
+    new ol.layer.Vector({
+      source: new ol.source.Vector({
+        features: [new ol.Feature({
+          geometry: new ol.geom.Point(ol.proj.fromLonLat([longitude, latitude]))
+        })]
+      }),
+      style: new ol.style.Style({
+        image: new ol.style.Icon({
+          src: 'marker.png'
+        })
+      })
+    })
+  ],
+  view: new ol.View({
+    center: ol.proj.fromLonLat([longitude, latitude]),
+    zoom: 10
+  })
+});
       </script>
       
       </body>
