--- a/location2.html
+++ b/location2.html
@@ -8,6 +8,9 @@
         <meta name="author" content="NicoWebCreations">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.png">
+        <meta http-equiv='cache-control' content='no-cache'>
+        <meta http-equiv='expires' content='0'>
+        <meta http-equiv='pragma' content='no-cache'>
         <style>
         body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         </style>
