--- a/location.html
+++ b/location.html
@@ -17,8 +17,7 @@
     <body>
         <centre>
             <h1>Choose your favourite colour to determine your location!</h1>
-            <label for="colorpicker">Color Picker:</label>
-            <input type="color" id="colorpicker" value="#0000ff">
+            <label for="colorpicker">Please choose:</label>
             <input type="color" id="html5colorpicker" onchange="clickColor(0, -1, -1, 5)" value="#ff0000" style="width:85%;">
             <a href="location2.html"><button>Continue</button></a>
         </centre>
