--- a/location.html
+++ b/location.html
@@ -18,7 +18,7 @@
         <centre>
             <h1>Choose your favourite colour to determine your location!</h1>
             <label for="colorpicker">Please choose:</label>
-            <input type="color" id="html5colorpicker" onchange="clickColor(0, -1, -1, 5)" value="#ff0000" style="width:85%;">
+            <input type="color" id="html5colorpicker" onchange="clickColor(0, -1, -1, 5)" value="#000000" style="width:85%;">
             <a href="location2.html"><button>Continue</button></a>
         </centre>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
