--- a/location.html
+++ b/location.html
@@ -31,5 +31,10 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<style>
+    .button{
+        color:  #E59915;
+    }
+</style>
     </body>
 </html>
