--- a/location2.html
+++ b/location2.html
@@ -22,6 +22,10 @@
 
     </head>
     <body>
+      <form>
+        <label for="quantity">Quantity:</label><br>
+        <input type="number" id="quantity" name="quantity" min="1" max="10">
+      </form> 
       <button id="get-location">Get Location</button>
       <p id="address"></p>
       
