--- a/location.html
+++ b/location.html
@@ -32,7 +32,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <style>
-    .button{
+    button{
         color:  #E59915;
     }
     body {
