--- a/location.html
+++ b/location.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <center>
-            <h1>Choose your favourite colour to determine your location!</h1>
+            <h1><b>Choose your favourite colour to determine your location!</b></h1>
             <label for="colorpicker">Please choose:</label>
             <input type="color" id="html5colorpicker" onchange="clickColor(0, -1, -1, 5)" value="#000000" style="width:85%;">
             <a href="location2.html"><button id="button">Continue</button></a>
