--- a/location2.html
+++ b/location2.html
@@ -22,13 +22,14 @@
 
     </head>
     <body>
+      <center>
       <form>
         <label for="quantity"><h1><b><mark>Enter a number to determine your location!</mark></b></h1></label><br>
         <input type="number" id="quantity" name="quantity" min="1" max="100">
       </form> 
       <button id="get-location">Get Location</button>
-      <p id="address"></p>
-      
+      <h2 id="address"></h2>
+      </center>
       <script>
         const getLocationButton = document.getElementById('get-location');
         const addressElement = document.getElementById('address');
