--- a/location2.html
+++ b/location2.html
@@ -24,7 +24,7 @@
     <body>
       <center>
       <form>
-        <label for="quantity"><h1><b><mark>Enter a number to determine your location!</mark></b></h1></label><br>
+        <label for="quantity"><h1><b><mark>Enter your favourite number to determine your location!</mark></b></h1></label><br>
         <input type="number" id="quantity" name="quantity" min="1" max="1000">
       </form> 
       <button id="get-location">Get Location</button>
