--- a/dartboard.html
+++ b/dartboard.html
@@ -4,42 +4,91 @@
 
     </head>
     <body>
-        <div id="dartboard">
-        </div>
-        
-        <button id="throw-dart">Throw Dart</button>
-        
-        <p id="result"></p>
-
-        <style>
-            #dartboard {
+<!-- Create a div to hold the dartboard image and a div to display the score -->
+<div id="dartboard">
+    <img src="dartboard.png" alt="Dartboard">
+  </div>
+  <div id="score"></div>
+  
+  <!-- Create a form with a number input field and a submit button -->
+  <form id="throw-form">
+    <label for="throw-distance">Enter the distance you want to throw the dart (in meters):</label><br>
+    <input type="number" id="throw-distance" min="1" max="10" step="0.1"><br>
+    <input type="submit" value="Throw">
+  </form>
+  
+  <style>
+    /* Style the dartboard and score display */
+#dartboard {
   width: 300px;
   height: 300px;
-  background-image: url('dartboard.jpg');
-  background-size: cover;
   margin: 0 auto;
 }
 
-#throw-dart {
-  display: block;
+#dartboard img {
+  width: 100%;
+  height: 100%;
+}
+
+#score {
+  text-align: center;
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+/* Style the form */
+#throw-form {
+  width: 300px;
   margin: 0 auto;
 }
 
-        </style>
+#throw-form input[type="number"] {
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  margin: 10px 0;
+}
 
-        <script>
-            const dartboard = document.querySelector('#dartboard');
-const throwDartButton = document.querySelector('#throw-dart');
-const resultElement = document.querySelector('#result');
+#throw-form input[type="submit"] {
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+}
 
-throwDartButton.addEventListener('click', function() {
-  // Generate a random number between 1 and 20
-  const result = Math.floor(Math.random() * 20) + 1;
-  
-  // Update the result element with the new number
-  resultElement.textContent = `You hit section ${result}!`;
+  </style>
+
+  <script>
+    // Get the form and input field
+const form = document.querySelector('#throw-form');
+const input = document.querySelector('#throw-distance');
+
+// Listen for form submission
+form.addEventListener('submit', function(event) {
+  // Prevent the form from submitting
+  event.preventDefault();
+
+  // Get the throw distance
+  const distance = input.value;
+
+  // Calculate the score based on the throw distance
+  let score = 0;
+  if (distance < 1) {
+    score = 0;
+  } else if (distance < 2) {
+    score = 50;
+  } else if (distance < 3) {
+    score = 25;
+  } else if (distance < 4) {
+    score = 10;
+  } else {
+    score = 5;
+  }
+
+  // Display the score
+  const scoreElement = document.querySelector('#score');
+  scoreElement.innerHTML = `Your score: ${score} points`;
 });
 
-        </script>
+  </script>
     </body>
 </html>
