--- a/dartboard.html
+++ b/dartboard.html
@@ -28,6 +28,7 @@
 #dartboard img {
   width: 100%;
   height: 100%;
+  background-image: "https://static.wikia.nocookie.net/club-penguin-rewritten/images/4/4d/Dart_Board.png";
 }
 
 #score {
