--- a/dartboard.html
+++ b/dartboard.html
@@ -13,7 +13,7 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  background: url(dartboard.jpg);
+  background: url(https://static.wikia.nocookie.net/club-penguin-rewritten/images/4/4d/Dart_Board.png);
   position: relative;
 }
 
