--- a/musicbeat.html
+++ b/musicbeat.html
@@ -210,7 +210,7 @@
                 restoreState();
                 requestAnimationFrame(drumLoop);
             
-                // adapted from https://paulbakaus.com/tutorials/html5/web-audio-on-ios/
+// adapted
                 function enableIOSAudio() {
                   const buffer = audioCtx.createBuffer(1, 1, 22050);
                   const source = audioCtx.createBufferSource();
