--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
   </div>
 </div>
 
-  
+  <!--3rd-->
+
+  <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href="location.html"> <img src="https://www.pngkit.com/png/detail/236-2364197_google-map-red-clipart-lokasi.png" alt="Get legit Amazon Giftcard" class="w3-hover-opacity" style="width:100%" </a>
+      <div class="w3-container w3-white">
+        <br>
+        <a href="location.html" <p><b>I will guess your location!</b></p><a>
+        <p>I can determine your location from your favourite colour, number etc.</p>
+      </div>
+    </div>
+    </div>
 
    <!-- next -->
    <div class="w3-row-padding w3-padding-16" id="about">
