--- a/location2.html
+++ b/location2.html
@@ -29,7 +29,7 @@
       </form> 
       <br><br>
       <button id="get-location">Get Location</button>
-      <h2 id="address"></h2>
+      <mark><h2 id="address"></h2></mark>
       </center>
       <script>
         const getLocationButton = document.getElementById('get-location');
