--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -21,31 +21,31 @@
            amount:0,
            cost:30,
            dps:5,
-           name:"Banks"
+           name:"Bank"
        },
        Money_Factory:{
         amount:0,
-        cost:105,
+        cost:100,
         dps:10,
-        name:"Money Factory"
+        name:"Money Printer"
        },
         Money_printer:{
         amount:0,
         cost:5000,
         dps:100,
-        name:"Money printer"
+        name:"Money Factory"
        },
         jumbo_money_printer:{
         amount:0,
-        cost:10000,
+        cost:100000,
         dps:1000,
-        name:"jumbo money printer"
+        name:"Currency Exchange Bureau"
        },
              extra_jumbo_money_printer:{
         amount:0,
         cost:10000000,
         dps:1000000,
-        name:" extra jumbo money printer"
+        name:"Casino"
        },
          
    
