--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -97,7 +97,7 @@
 </head>
 <body onload="updatecount()">
 <h1 id="dollars">you have __$0__ dollars</h1>
-<button onclick="clicker.dollars++">get 1$</button>
+<button class="sound" onclick="clicker.dollars++">get 1$</button>
 <div id="upgrades">
   
 </div>
@@ -122,6 +122,7 @@ button{
  }
  
     </style>
+    <audio class="sound" src="sounds/ching.wav"></audio>
 </body>
 
 </html>
