--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -23,25 +23,25 @@
            dps:5,
            name:"Bank"
        },
-       Money_Factory:{
+       Money_Printer:{
         amount:0,
         cost:100,
         dps:10,
         name:"Money Printer"
        },
-        Money_printer:{
+        Money_Factory:{
         amount:0,
         cost:5000,
         dps:100,
         name:"Money Factory"
        },
-        jumbo_money_printer:{
+        Currency_Exchange_Bureau:{
         amount:0,
         cost:100000,
         dps:1000,
         name:"Currency Exchange Bureau"
        },
-             extra_jumbo_money_printer:{
+             Casino:{
         amount:0,
         cost:10000000,
         dps:1000000,
