--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -96,7 +96,7 @@
 </script>
 </head>
 <body onload="updatecount()">
-<h1 id="dollars">you have &nbsp; __$0__ dollars</h1>
+<h1 id="dollars">you have &nbsp; __$0__ &nbsp; dollars</h1>
 <button class="sound" onclick="clicker.dollars++">get 1$</button>
 <div id="upgrades">
   
