--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-<title>money clicker 2.0</title>
+<title>Money Clicker</title>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"> </script>
 <script>
   var clicker={
