--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -47,7 +47,12 @@
         dps:1000000,
         name:"Casino"
        },
-         
+       Lottery:{
+        amount:0,
+        cost:1000000000,
+        dps:100000000,
+        name:"Lottery"
+       },
    
   
    }
