--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -104,7 +104,7 @@
 </head>
 <body onload="updatecount()">
 <h1 id="dollars">you have &nbsp;&nbsp; __$0__ &nbsp;&nbsp; dollars</h1>
-<button class="sound" onclick="clicker.dollars++">get 1$</button>
+<kbd data-key="13"><button class="sound" Enter onclick="clicker.dollars++">get 1$</button></kbd>
 <div id="upgrades">
   
 </div>
@@ -129,7 +129,7 @@ button{
  }
  
     </style>
-    <audio class="sound" src="sounds/ching.wav"></audio>
+    <audio data-key="13" class="sound" src="sounds/ching.wav"></audio>
 </body>
 
 </html>
