--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -103,7 +103,7 @@
 </script>
 </head>
 <body onload="updatecount()">
-<h1 id="dollars">You have  &nbsp;&nbsp;  __$0__  &nbsp;&nbsp;  dollars</h1>
+<h1 id="dollars">You have  &nbsp;&nbsp;$  __$0__ </h1>
 <kbd data-key="13"><button class="sound" Enter onclick="clicker.dollars++">get 1$</button></kbd>
 <div id="upgrades">
   
