--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -4,9 +4,14 @@
       <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv='expires' content='0'>
-    <meta http-equiv='pragma' content='no-cache'>
+    <meta charset="UTF-8">
+    <meta name="description" content="A site to do random stuff if you're bored!">
+    <meta name="keywords" content="fun, neal.fun, boredbutton, bored, have fun,">
+    <meta name="author" content="NicoWebCreations">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+        crossorigin="anonymous"></script>
 <title>Money Clicker</title>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"> </script>
 <script>
