--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -107,6 +107,7 @@
   }
 </script>
 </head>
+<centre>
 <body onload="updatecount()">
 <h1 id="dollars">You have  &nbsp;&nbsp;$  __$0__ </h1>
 <kbd data-key="13"><button class="sound" Enter onclick="clicker.dollars++">get 1$</button></kbd>
@@ -134,7 +135,7 @@ button{
  }
  
     </style>
-    <audio data-key="13" class="sound" src="sounds/ching.wav"></audio>
+    <audio data-key="13" class="sound" src="sounds/ching.wav"></audio></centre>
 </body>
 
 </html>
