--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -136,6 +136,18 @@ button{
  
     </style>
     <audio data-key="13" class="sound" src="sounds/ching.wav"></audio></centre>
+
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
+     crossorigin="anonymous"></script>
+<!-- fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6501023040597198"
+     data-ad-slot="2108039039"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 
 </html>
