--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -129,7 +129,7 @@ button{
     font-size:90px;
  }
  body{
-    background-image:"https://previews.123rf.com/images/svl861/svl8611503/svl861150300138/38410556-pile-of-one-hundred-dollar-bills-new-and-old-design-top-view-point-.jpg";
+    background-color:"green";
 
    font-size: 50px;
  }
