--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
         crossorigin="anonymous"></script>
+    <meta name="google-site-verification" content="gtw17MUPkFX2hhePgWVU_Q3g5WdYPCpfY8bmhtRUuVE" />
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
