--- a/pcdownload.html
+++ b/pcdownload.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4EXYD6265N');
+</script>
+
 <title>Speed up your PC</title>
 <meta charset="UTF-8">
     <meta name="description" content="A site to do random stuff if you're bored">
