--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4EXYD6265N');
-</script>
 
 <title>You Succeeded!</title>
 <meta charset="UTF-8">
@@ -35,15 +25,7 @@ body {
 <p>For a chance to get an Amazon gift card, contact redadmiral1118@gmail.com with the PIN you used and this string of characters to prove it: <i>Bt5%w8£</i></p>
 <h4><i> This is not a scam and is legit. We will not ask for personal information. If you would prefer not to send an email, please submit a contact form with the details.
 </center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
-<!-- fixed -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6501023040597198"
-     data-ad-slot="2108039039"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+     <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
