--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html> <!--new-->
 <html>
   <head>
-    
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4EXYD6265N');
-</script>
 
     <title>thelostdocs.com fun stuff!</title>
     <meta charset="UTF-8">
@@ -47,18 +37,6 @@
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>Contact</a>
     <a href="https://discord.com/channels/1060118955261448253/1060133308727558184" target="_blank" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>Discord</a>
   </div>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
-<!-- display -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6501023040597198"
-     data-ad-slot="3449837022"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
   <div class="w3-panel w3-large">
   </div>
 </nav>
@@ -162,16 +140,7 @@
   <!-- Footer -->
 
   <div class="w3-black w3-center w3-padding-24">Made by NicoWebCreations</div>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-  crossorigin="anonymous"></script>
-<!-- fixed -->
-<ins class="adsbygoogle"
-  style="display:inline-block;width:728px;height:90px"
-  data-ad-client="ca-pub-6501023040597198"
-  data-ad-slot="2108039039"></ins>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 <!-- End page content -->
 </div>
 
@@ -187,6 +156,6 @@ function w3_close() {
     document.getElementById("myOverlay").style.display = "none";
 }
 </script>
-
+<script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
