--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-4EXYD6265N');
-</script>
 
       <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -149,17 +140,7 @@ button{
     </style>
     <audio data-key="13" class="sound" src="sounds/ching.wav"></audio></centre>
 
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
-<!-- fixed -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6501023040597198"
-     data-ad-slot="2108039039"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
 </html>
