--- a/emoji.html
+++ b/emoji.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4EXYD6265N');
-</script>
 
         <title>Emoji Finder</title>
 <meta charset="UTF-8">
@@ -228,15 +218,7 @@ toggleButton(blueButton, blueSelected);
 <br>
 <button class="emojibutton" onClick="window.location.reload();">Refresh Page</button>
 </center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
-<!-- fixed -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6501023040597198"
-     data-ad-slot="2108039039"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+<script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
