--- a/guesscode.html
+++ b/guesscode.html
@@ -2,16 +2,6 @@
 <html lang="en">
 
 <head>
-    
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4EXYD6265N');
-</script>
 
     <title>Guess the code for legit reward!</title>
     <meta charset="UTF-8">
@@ -55,13 +45,6 @@
   <br>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
      crossorigin="anonymous"></script>
-<!-- fixed -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6501023040597198"
-     data-ad-slot="2108039039"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+     <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
   <!-- <h4> Please note that this system has still got a few bugs, <br>so may result in wrong entries being shown. </h4> -->
 </html>
