--- a/music.html
+++ b/music.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4EXYD6265N');
-</script>
 
         <title>Play Music!</title>
         <meta charset="UTF-8">
@@ -317,15 +307,8 @@ div.borderColor3 {
             </style>
 
 <iframe src="musicbeat.html" height="200" width="800" style="display: block; margin-left: auto; margin-right: auto; z-index: 12;" title="Iframe Example"></iframe>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
-<!-- fixed -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6501023040597198"
-     data-ad-slot="2108039039"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+
+<script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
       </body>
 </html>
