--- a/location.html
+++ b/location.html
@@ -49,5 +49,6 @@ mark {
 }
 </style>
 <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
-    </body>
+<script type="text/javascript" src="https://s.skimresources.com/js/229207X1711530.skimlinks.js"></script>
+</body>
 </html>
