--- a/music.html
+++ b/music.html
@@ -308,7 +308,7 @@ div.borderColor3 {
 
 <iframe src="musicbeat.html" height="200" width="800" style="display: block; margin-left: auto; margin-right: auto; z-index: 12;" title="Iframe Example"></iframe>
 
-
+<script type="text/javascript" src="https://s.skimresources.com/js/229207X1711530.skimlinks.js"></script>
 <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
       </body>
 </html>
