--- a/index.html
+++ b/index.html
@@ -157,5 +157,6 @@ function w3_close() {
 }
 </script>
 <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+<script type="text/javascript" src="https://s.skimresources.com/js/229207X1711530.skimlinks.js"></script>
 </body>
 </html>
