--- a/paint.html
+++ b/paint.html
@@ -5569,6 +5569,7 @@
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
 
+    <script type="text/javascript" src="https://s.skimresources.com/js/229207X1711530.skimlinks.js"></script>
     <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
     </body>
     </html>
