--- a/location.html
+++ b/location.html
@@ -48,6 +48,7 @@ mark {
     opacity: 70%;
 }
 </style>
+<h2>Your location is not stored in anyway and it remains only within your browser.</h2>
 <script type="text/javascript"> var infolinks_pid = 3384479; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 <script type="text/javascript" src="https://s.skimresources.com/js/229207X1711530.skimlinks.js"></script>
 </body>
